# godot

./: .clang-format  .git-blame-ignore-revs  .gitignore  .mailmap  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT.txt  DONORS.md  LICENSE.txt  LOGO_LICENSE.txt  README  README.md  REDOT_AUTHORS.md  SConstruct  flake.nix  methods.py  package.nix  platform_methods.py  scu_builders.py  version.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
core/: SCsub  core_bind.compat.inc  core_bind.cpp  core_bind.h  core_builders.py  core_constants.cpp  core_constants.h  core_globals.cpp  core_globals.h  core_string_names.cpp  core_string_names.h  doc_data.cpp  doc_data.h  register_core_types.cpp  register_core_types.h  typedefs.h  version.h
drivers/: register_driver_types.cpp  register_driver_types.h
editor/: SCsub  action_map_editor.cpp  action_map_editor.h  add_metadata_dialog.cpp  add_metadata_dialog.h  animation_bezier_editor.cpp  animation_bezier_editor.h  animation_track_editor.cpp  animation_track_editor.h  animation_track_editor_plugins.cpp  animation_track_editor_plugins.h  audio_stream_preview.cpp  audio_stream_preview.h  code_editor.cpp  code_editor.h  connections_dialog.cpp  connections_dialog.h  create_dialog.cpp  create_dialog.h  dependency_editor.cpp  dependency_editor.h  directory_create_dialog.cpp  directory_create_dialog.h  doc_tools.cpp  doc_tools.h  editor_about.cpp  editor_about.h  editor_asset_installer.cpp  editor_data.cpp  (+149 more)
platform/android/java/nativeSrcsConfigs/: CMakeLists.txt  README.md  build.gradle
(+4167 files in other folders)
